--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 APP_ENV=development
-REDIS_URL=redis://default:KRkgzBn9RQtDfOeBVcm8SVKTk6lb4zLb@redis-10069.c281.us-east-1-2.ec2.redns.redis-cloud.com:10069
+REDIS_URL=********
 REDIS_USER=default
-REDIS_PASSWORD=KRkgzBn9RQtDfOeBVcm8SVKTk6lb4zLb
+REDIS_PASSWORD=********
 REDIS_HOST=redis-10069.c281.us-east-1-2.ec2.redns.redis-cloud.com
 REDIS_PORT=10069
 
